# project-momentum

./: .gitignore  CMakeLists.txt
assets/levels/: level1.json  test.json
engine/vortex/: .gitignore  CMakelists.txt  README.md
engine/vortex/include/vortex/components/: physics_components.hpp  render_components.hpp
engine/vortex/include/vortex/core/config/: vortex_config.hpp  vortex_settings.hpp
engine/vortex/include/vortex/core/containers/: bitset.hpp  hash_map.hpp  queue.hpp  static_array.hpp  string.hpp  vortex_array.hpp
engine/vortex/include/vortex/core/input/: input_backend.hpp  input_manager.hpp
engine/vortex/include/vortex/core/math/: vortex_aabb.hpp  vortex_math.hpp
engine/vortex/include/vortex/core/utilities/: algorithm.hpp  memory.hpp  vortex_time.hpp
engine/vortex/include/vortex/ecs/: component_pool.hpp  component_types.hpp  entity.hpp  entity_manager.hpp  registry.hpp  view.hpp
engine/vortex/include/vortex/input/: input_backend.hpp  input_manager.hpp
engine/vortex/include/vortex/physics/: hierarchical_grid.hpp  physics_types.hpp
engine/vortex/include/vortex/renderer/: render_command.hpp  render_queue.hpp  renderer_backend.hpp  vortex_graphics.hpp
engine/vortex/include/vortex/systems/: physics_system.hpp
engine/vortex/src/core/: input_manager.cpp
engine/vortex/src/core/input/: input_manager.cpp  raylib_input.cpp
engine/vortex/src/core/utilities/: vortex_time.cpp
engine/vortex/src/ecs/: entity_manager.cpp
engine/vortex/src/input/: input_manager.cpp  raylib_input.cpp
engine/vortex/src/physics/: hierarchical_grid.cpp
engine/vortex/src/renderer/: raylib_renderer.cpp
engine/vortex/src/systems/: physics_system.cpp
game/include/: application.hpp  entity_factory.hpp  leveldata.hpp
game/include/components/: player.hpp
game/include/momentum/: application.hpp  leveldata.hpp
game/include/momentum/components/: health.hpp
game/src/: application.cpp  entity_factory.cpp  main.cpp
include/engine/components/: physics_components.hpp  render_components.hpp
include/engine/core/: input_manager.hpp  lazy_array.hpp
include/engine/ecs/: component_pool.hpp  component_types.hpp  entity.hpp  entity_manager.hpp  registry.hpp  view.hpp
include/engine/systems/: physics_system.hpp
include/game/: application.hpp
include/game/components/: player_controller.hpp
src/engine/core/: input_manager.cpp
src/engine/ecs/: entity_manager.cpp
src/engine/systems/: physics_system.cpp
src/game/: main.cpp
